fix: fix merge in develop

--- a/Diaristando/assets/locale/ptBr.json
+++ b/Diaristando/assets/locale/ptBr.json
@@ -1,3 +1,5 @@
 {
-    "hello-world": "Olá mundo"
+    "hello-world": "Olá mundo",
+    "h1-boas-vindas": "Boas vindas ao Diaristando!",
+    "h2-boas-vindas": "Te ajudando a conquistar sua independência!"
 }
