--- a/Diaristando/assets/locale/ptBr.json
+++ b/Diaristando/assets/locale/ptBr.json
@@ -1,6 +1,6 @@
 {
     "hello-world": "Olá mundo",
-    "h1-boas-vindas": "Boas vindas ao Diaristando!",
+    "h1-boas-vindas": "Boas-vindas ao Diaristando!",
     "h2-boas-vindas": "Te ajudando a conquistar sua independência!",
     "h2-como-funciona": "Como funciona",
     "p-como-funciona": "São 4 passos para receber seu pagamento de forma rápida e sem burocracia."
